[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Mr Munshi <realmrmunshi@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/mr-munshi/hello-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.118"
